...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="All Adventures" id="evb-Wd-Ycg">
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="ixD-nV-CUb">
                            <connections>
...
            <objects>
                <splitViewController id="c5s-XZ-0Y1" userLabel="Adventure Split View" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Adventure" image="adventure" id="x44-bY-dWd" userLabel="Adventure"/>
                    <connections>
                        <segue destination="jrv-C7-tOV" kind="relationship" relationship="detailViewController" id="mlc-3M-hH1"/>
...
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Category" id="3Cj-tS-NPw" userLabel="Category"/>
                    <connections>
                        <segue destination="P4W-Eh-A8m" kind="show" identifier="categoryToList" id="svQ-l3-LbN"/>
...
                            <autoresizingMask key="autoresizingMask"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="camping" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYh-m6-hvA" userLabel="LabelCategory">
                                    <rect key="frame" x="10" y="18" width="80" height="14"/>
                                    <constraints>
...
                                <rect key="frame" x="303" y="512" width="46" height="30"/>
                                <color key="backgroundColor" red="1" green="0.74509566859999998" blue="0.040600900029999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="btnSave:" destination="yEh-0O-lHc" eventType="touchUpInside" id="hVb-kb-Xv1"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Adventures" id="XDi-Qt-Tgm"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mW0-zV-5fE" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title :" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Vvl-KL-LJR">
                                <rect key="frame" x="16" y="119" width="343" height="30"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location :" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="A96-Ad-LbR">
                                <rect key="frame" x="16" y="157" width="343" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Category :" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="pdP-YU-sow">
                                <rect key="frame" x="16" y="195" width="343" height="30"/>
                                <constraints>
...
